# handwritten_font

./: .gitignore  CMakeLists.txt  README.md  exampleproject.toml  project.toml  update_chardef.cmake
chardefs/: CMakeLists.txt  chardef_syntax.md  charlistgen.py  parse_chardef.cpp  parse_chardef.hpp
chardefs/actual_files/: chardef_syntax.md  charlistgen.py
chardefs/actual_files/small/mono/: 0001.cdef
chardefs/actual_files/small/proportional/: 0001.cdef  0002.cdef  0003.cdef  0006.cdef  0007.cdef  0011.cdef
chardefs/files/: metadata.toml
chardefs/files/small/mono/: 0002.cdef  0003.cdef  0006.cdef
chardefs/files/small/proportional/: 0001.cdef  0002.cdef  0009.cdef  000a.cdef  000b.cdef
chardefs/prog_codes/: CMakeLists.txt  chardef_consts.hpp  chardef_filemeta.cpp  chardef_filemeta.hpp  parse_chardef.cpp  parse_chardef.hpp
chardefs/small/: 0x0001.txt
chardefs/small/mono/: 0001.cdef  0002.cdef  0003.cdef  0004.cdef  0005.cdef  0006.cdef  0007.cdef  0008.cdef  0009.cdef  000a.cdef  000b.cdef
chardefs/small/proportional/: 0002.cdef  0003.cdef  0004.cdef  0005.cdef  0006.cdef  0007.cdef  0008.cdef  0009.cdef  000a.cdef  000b.cdef
font_maker/: CMakeLists.txt  font_maker.py  svg_utils.py
image_cutter/: CMakeLists.txt  corner.cpp  corner.hpp  image_cutter.cpp  image_handler.cpp  image_handler.hpp  image_includes.hpp  image_utils.cpp  image_utils.hpp  points.cpp  points.hpp  qr_codes.hpp  read_metadata.cpp  read_metadata.hpp  sides.cpp  sides.hpp  testtoml.toml  write_area.cpp  write_area.hpp
input_PDF/: CMakeLists.txt  generator.cpp  input_pdf_consts.hpp  input_pdf_generator.cpp  input_pdf_generator.hpp
libs/: CMakeLists.txt
libs/chardef/: CMakeLists.txt  chardef_consts.hpp  chardef_convert_consts.cpp  chardef_convert_consts.hpp  chardef_dirmeta.cpp  chardef_dirmeta.hpp  chardef_filemeta.cpp  chardef_filemeta.hpp  parse_chardef.cpp  parse_chardef.hpp
libs/general/: CMakeLists.txt  helpers.cpp  helpers.hpp
