cmake_minimum_required(VERSION 3.16)
project(handfont CXX)
if(NOT EXISTS ${CMAKE_BINARY_DIR}/handfont)
	file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/handfont)
	file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/handfont/bin)
	file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/handfont/bin/libs)
	file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/chardefs/files DESTINATION ${CMAKE_BINARY_DIR}/handfont)
	file(RENAME ${CMAKE_BINARY_DIR}/handfont/files ${CMAKE_BINARY_DIR}/handfont/chardefs)
	file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/handfont/datas)
endif()
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/handfont/bin/libs)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/handfont/bin)
add_subdirectory(libs)
add_subdirectory(input_PDF)
add_subdirectory(image_cutter)
