cmake_minimum_required(VERSION 3.16)
project(handfont CXX)
if(NOT EXISTS ${CMAKE_BINARY_DIR}/handfont)
    file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/handfont)
    file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/handfont/bin)
    file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/handfont/bin/libs)
    file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/chardefs/files DESTINATION ${CMAKE_BINARY_DIR}/handfont)
    file(RENAME ${CMAKE_BINARY_DIR}/handfont/files ${CMAKE_BINARY_DIR}/handfont/chardefs)
    file(REMOVE ${CMAKE_BINARY_DIR}/handfont/files)
    file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/handfont/datas)
endif()
add_custom_target(
    update_chardef ALL
    COMMAND ${CMAKE_COMMAND} -DBINARY_DIR=${CMAKE_BINARY_DIR} -DCURRENT_SOURCE_DIR=${CMAKE_CURRENT_SOURCE_DIR} -P
            ${CMAKE_CURRENT_SOURCE_DIR}/update_chardef.cmake)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/handfont/bin/libs)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/handfont/bin)
include(cmake/CPM.cmake)
cpmaddpackage(NAME toml11 GITHUB_REPOSITORY ToruNiina/toml11 GIT_TAG v3.7.1)
add_subdirectory(libs)
add_subdirectory(input_PDF)
add_subdirectory(image_cutter)
add_subdirectory(font_maker)
