cmake_minimum_required(VERSION 3.16)
project(handfont_image_cutter CXX)
find_package(Boost 1.71 COMPONENTS program_options REQUIRED )
#find_package(ICU 61.0 COMPONENTS uc REQUIRED)
find_package(PkgConfig REQUIRED)
find_package(OpenCV 4.3 COMPONENTS core imgcodecs highgui imgproc objdetect REQUIRED)
pkg_check_modules(spdlog spdlog REQUIRED)

add_executable(image_cutter image_cutter.cpp) #image_utils.cpp)
target_include_directories(image_cutter PUBLIC ${Boost_INCLUDE_DIR} )
target_include_directories(image_cutter PUBLIC ${handfont_libs_SOURCE_DIR})
target_include_directories(image_cutter PUBLIC ${OpenCV_INCLUDE_DIR})
target_link_libraries(image_cutter LINK_PUBLIC ${Boost_LIBRARIES} )
target_link_libraries(image_cutter PUBLIC parse_chardef chardef_filemeta chardef_cvt_consts helpers)
target_link_libraries(image_cutter PUBLIC ${OpenCV_LIBRARIES})
#target_link_libraries(image_cutter PUBLIC ${ICU_LIBRARIES})
target_link_libraries(image_cutter PUBLIC ${spdlog_LIBRARIES})
target_compile_options(image_cutter PUBLIC $<IF:$<CONFIG:Debug>,-g3 -O0,>)
target_compile_options(image_cutter PUBLIC -Wall -Wextra )
