cmake_minimum_required(VERSION 3.16)
project(handfont_chardef_libs CXX)
add_library(parse_chardef SHARED parse_chardef.cpp)
target_compile_features(parse_chardef PUBLIC cxx_std_17)
add_library(chardef_filemeta SHARED chardef_filemeta.cpp)
target_compile_features(chardef_filemeta PUBLIC cxx_std_17)
target_include_directories(chardef_filemeta PUBLIC ${handfont_libs_SOURCE_DIR})
